--- a/src/_views.scss
+++ b/src/_views.scss
@@ -124,5 +124,5 @@
 
 .left-sidebar-inner .nav-content-item {
   font-size: 0.875rem;
-  font-weight: 500;
+  font-weight: 400;
 }
